app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: snowflake-service
spec:
  selector:
    app: snowflake-id-generator
  ports:
    - port: 80
      name: http
      targetPort: 8080
